[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/images/kenney_gameicons/PNG/White/2x/exitLeft.png" type="Texture" id=1]
[ext_resource path="res://assets/images/kenney_gameicons/PNG/White/2x/open.png" type="Texture" id=2]
[ext_resource path="res://assets/images/kenney_gameicons/PNG/White/2x/gear.png" type="Texture" id=3]
[ext_resource path="res://scenes/ui/menus/pause_menu.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/ComicNeue-Angular/ComicNeueAngular-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/ui/components/sure_popup.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 5 )

[node name="pause_menu" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 4 )

[node name="background_color" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
color = Color( 0, 0, 0, 0.231373 )

[node name="out_margin" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="out_margin"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1870.0
margin_bottom = 1030.0

[node name="upper_half" type="MarginContainer" parent="out_margin/VBoxContainer"]
margin_right = 1820.0
margin_bottom = 488.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="out_margin/VBoxContainer/upper_half"]
margin_right = 1820.0
margin_bottom = 488.0

[node name="HBoxContainer" type="HBoxContainer" parent="out_margin/VBoxContainer/upper_half/VBoxContainer"]
margin_right = 1820.0
margin_bottom = 106.0

[node name="push_to_end" type="Control" parent="out_margin/VBoxContainer/upper_half/VBoxContainer/HBoxContainer"]
margin_right = 1704.0
margin_bottom = 106.0
size_flags_horizontal = 3

[node name="config_button" type="Button" parent="out_margin/VBoxContainer/upper_half/VBoxContainer/HBoxContainer"]
margin_left = 1708.0
margin_right = 1820.0
margin_bottom = 106.0
icon = ExtResource( 3 )

[node name="lower_half" type="MarginContainer" parent="out_margin/VBoxContainer"]
margin_top = 492.0
margin_right = 1820.0
margin_bottom = 754.0
size_flags_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="out_margin/VBoxContainer/lower_half"]
margin_right = 1820.0
margin_bottom = 262.0
size_flags_vertical = 2

[node name="left_push" type="Control" parent="out_margin/VBoxContainer/lower_half/HBoxContainer"]
margin_bottom = 262.0
size_flags_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="out_margin/VBoxContainer/lower_half/HBoxContainer"]
margin_left = 249.0
margin_right = 1570.0
margin_bottom = 262.0
size_flags_horizontal = 3
custom_constants/separation = 50

[node name="continue" type="Button" parent="out_margin/VBoxContainer/lower_half/HBoxContainer/VBoxContainer"]
margin_right = 1321.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 1 )
text = "PAUSE_MENU_CONTINUE"
icon = ExtResource( 2 )

[node name="quit" type="Button" parent="out_margin/VBoxContainer/lower_half/HBoxContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 1321.0
margin_bottom = 262.0
custom_fonts/font = SubResource( 1 )
text = "PAUSE_MENU_QUIT"
icon = ExtResource( 1 )

[node name="right_push" type="Control" parent="out_margin/VBoxContainer/lower_half/HBoxContainer"]
margin_left = 1574.0
margin_right = 1574.0
margin_bottom = 262.0
size_flags_horizontal = 2

[node name="sure_popup" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="pressed" from="out_margin/VBoxContainer/upper_half/VBoxContainer/HBoxContainer/config_button" to="." method="_on_config_button_pressed"]
[connection signal="pressed" from="out_margin/VBoxContainer/lower_half/HBoxContainer/VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="out_margin/VBoxContainer/lower_half/HBoxContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
